fix(admin): locale-pinned money copy, active-only quiet testers, config-sourced timeout (mezo-kjwa)
- M1: cost_spike's $X.XX detail now formats with Locale.ROOT (dot
  decimal, never comma) — align the FE mock seed to match real backend
  output.
- M2: tester_quiet excludes DISABLED accounts (never-logged-in users
  stay excluded too, now documented inline); add an IT proving a quiet
  DISABLED account does not surface.
- M3: AdminAlertService/AdminAlertQuery's SET LOCAL statement_timeout
  now reads AdminProperties.statementTimeoutSql() (new
  mezo.admin.statement-timeout, same derived-accessor idiom as
  AdminMemoryProperties) instead of a hardcoded "5s".
- Opportunistic: AdminAlertsCompanionOffIT seeds a firing llm_errors
  feature and asserts it still appears while memory_stuck/job_missed
  stay absent — "degraded, not dead" made real.